# NLPDemo

./: main.py  pyproject.toml  requirements.txt
src/: dataset_analysis.py  dependency_visualizer.py  home_page.py  ner_visualizer.py  pos_tagger.py  reviewSamples20.json  token_visualizer.py  utils.py
