[tool.poetry]
name = "streamlid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.0.0"
spacy-streamlit = "^1.0.2"
streamlit = "^1.0.0"
matplotlib = "^3.4.3"
plotly = "^5.3.1"
streamlit-pandas-profiling = "^0.1.2"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
